--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clamp": "^1.0.1",
     "color-parse": "^1.2.0",
     "color-space": "^1.14.3",
-    "lerp": "^1.0.3"
+    "lerp": "^1.0.3",
+    "varify": "^0.2.0"
   }
 }
